--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: "mmistakes/minimal"
+theme: jekyll-theme-minimal
 title: Siddharth Lotia
 description: Research Fellow, IIIT Bangalore
 
